--- a/web/include/footer.xhtml
+++ b/web/include/footer.xhtml
@@ -28,9 +28,9 @@
             </div>
         </div>
     </footer>
-    <script src="asset/js/jquery.min.js"></script>
-    <script src="asset/js/bootstrap.min.js"></script>
-    <script src="asset/owl-carousel/owl.carousel.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js></script>  
     <script src="asset/js/custom.js"></script>
-    <script src="asset/js/wow.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> 
 </ui:composition>
