--- a/web/template/template.xhtml
+++ b/web/template/template.xhtml
@@ -5,23 +5,23 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <ui:insert name="title"></ui:insert>
-        <link rel="stylesheet" href="asset/css/bootstrap.min.css"></link>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"></link>
         <link rel="stylesheet" href="asset/css/my.css"></link>
         <link rel="stylesheet" href="asset/css/check.css"></link>
-        <link rel="stylesheet" href="asset/css/animate.min.css" type="text/css"></link>
-        <link href="asset/owl-carousel/owl.carousel.css" rel="stylesheet"></link>
-        <link href="asset/owl-carousel/owl.theme.css" rel="stylesheet"></link>
-        <link rel="stylesheet" href="./admin/assets/font-awesome-4.7.0/css/font-awesome.min.css"></link>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" type="text/css"></link>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" rel="stylesheet"></link>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.csss" rel="stylesheet"></link>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css"></link>
     </h:head>
     <h:body>
         <ui:include src="../include/header.xhtml"></ui:include>
         <ui:insert name="content"></ui:insert>
         <ui:include src="../include/footer.xhtml"></ui:include>
-        <script src="asset/js/jquery.min.js"></script>
-        <script src="asset/js/bootstrap.min.js"></script>
-        <script src="asset/owl-carousel/owl.carousel.js"></script>  
+        <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js></script>  
         <script src="asset/js/custom.js"></script>
-        <script src="asset/js/wow.min.js"></script> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> 
     </h:body>
 
 </html>
